--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.18",
+    "@mui/x-charts": "^6.18.2",
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.2.0",
     "@tanstack/react-query": "^5.8.4",
     "aos": "^2.3.4",
     "axios": "^1.6.2",
